# ods_nlp_research

./: NER_deeppavlov_usage.ipynb  README.md  pyproject.toml
deeppavlov/core/commands/: utils.py
deeppavlov/core/common/: errors.py
deeppavlov/core/data/: data_learning_iterator.py  dataset_reader.py  simple_vocab.py  utils.py
deeppavlov/core/models/: component.py  estimator.py  nn_model.py  serializable.py  torch_model.py
deeppavlov/dataset_iterators/: morphotagger_iterator.py
deeppavlov/dataset_readers/: morphotagging_dataset_reader.py
deeppavlov/models/preprocessors/: mask.py  torch_transformers_preprocessor.py
deeppavlov/models/torch_bert/: crf.py  torch_transformers_sequence_tagger.py
