[tool.poetry]
name = "ods_nlp_rnd"
version = "0.1.0"
description = ""
authors = ["Kovalev Alexei <frost.mephi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "~1.13.1"
torchvision = "~0.14.1"
torchaudio = "~0.13.1"
huggingface-hub = "~0.12.0"
transformers = "~4.26.0"
notebook = "~6.5.2"
pandas = "~1.5.3"
ipywidgets = "~8.0.4"
#bertviz = "~1.4.0"
overrides = "4.1.2"
torchcrf = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
